<resources>
    <string name="app_name">BiblosPK</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_main">BiblosPK</string>
    <string name="title_activity_main_with_cash">Debts: %1$.02f PLN</string>
    <string name="title_activity_expired">Account expired!</string>
    <string name="title_activity_details">Details</string>

    <string name="title_cut_library">CUT Library</string>
    <string name="hint_login">Card number</string>
    <string name="hint_password">Password</string>
    <string name="checkbox_rules">Accepted:</string>
    <string name="text_rules">rules</string>

    <string name="tab_lend_0">Lends</string>
    <string name="tab_waiting_0">Waiting</string>
    <string name="tab_booked_0">Booked</string>

    <string name="tab_lend">Lends (%1$d)</string>
    <string name="tab_waiting">Waiting (%1$d)</string>
    <string name="tab_booked">Booked (%1$d)</string>

    <string name="error_empty_login">Please enter your library card number</string>
    <string name="error_empty_password">Please enter password to your library account</string>
    <string name="error_invalid_credentials">Invalid library card number or password</string>
    <string name="error_connection">Connection error</string>
    <string name="error_server">Server have breakdown, please try again later</string>
    <string name="error_parse">Parse error, please contact with author</string>
    <string name="error_undefined">This error is strange, please contact with author</string>

    <string name="info_available_prolongs">prolongs: %1$d</string>
    <string name="info_no_available_prolongs">prolong is not available</string>

    <string name="button_login">Login</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">About</string>

    <string name="notify_title_expired">Books expired</string>
    <string name="notify_title_ready">Books ready to lend</string>
    <string name="notify_title_expired_and_ready">Expired and ready to lend</string>

    <string name="notify_section_expired">Expired:</string>
    <string name="notify_section_ready">Ready to lend:</string>
    <string name="book_icon">Book icon</string>

    <plurals name="notify_content_expired">
        <item quantity="one">You have %1$d book expired!</item>
        <item quantity="other">You have %1$d books expired!</item>
    </plurals>

    <plurals name="notify_content_ready">
        <item quantity="one">You have %1$d book ready to lend!</item>
        <item quantity="other">You have %1$d books ready to lend!</item>
    </plurals>

    <plurals name="notify_content_expired_and_ready_p1">
        <item quantity="one">%1$d book expired and</item>
        <item quantity="other">%1$d books expired and</item>
    </plurals>

    <plurals name="notify_content_expired_and_ready_p2">
        <item quantity="one">%1$d book ready to lend!</item>
        <item quantity="other">%1$d books ready to lend!</item>
    </plurals>

    <string name="label_title">Title</string>
    <string name="label_author">Author</string>
    <string name="label_signature">Signature</string>
    <string name="label_due_date">Due date</string>
    <string name="label_expire_date">Expire date</string>
    <string name="label_request_date">Request date</string>
    <string name="label_rental">Rental office</string>
    <string name="label_queue">In queue</string>
    <string name="label_prolongs">Prolongs</string>
    <string name="label_status">Status</string>

    <string name="value_prolongs">available %1$d of %2$d</string>
    <string name="value_prolongs_0">prolong not available</string>
    <string name="value_queue">%1$d</string>

    <string-array name="array_status">
        <item>Loan</item>
        <item>Reserved</item>
        <item>Ready to get</item>
    </string-array>

    <string name="button_prolong">Prolong</string>
    <string name="button_cancel_reservation">Cancel reservation</string>

    <string name="toast_prolong_do">Prolong request was sent</string>
    <string name="toast_prolong">Book was prolong successful</string>
    <string name="toast_prolong_all">All selected book was prolong</string>
    <string name="toast_prolong_no">None of selected books was prolong</string>
    <string name="toast_prolong_not">Book wasn\'t prolong</string>
    <string name="toast_prolong_some">Some books was prolong and some books not</string>

    <string name="toast_cancel_do">Cancel reservation request was sent</string>
    <string name="toast_cancel">Reservation canceled</string>
    <string name="toast_cancel_not">Reservation not canceled</string>


    <string name="pref_cat_general">General</string>

    <string name="pref_title_logout">Logout</string>
    <string name="pref_description_logout">Click to clear entered BPK login and password (logout)</string>
    <string name="pref_title_account">Account: %1$s</string>

    <string name="pref_title_autoprolong">Auto prolong</string>
    <string name="pref_description_autoprolong">Prolong expired books automatically (TODO: not
        implemented yet)
    </string>

    <string name="pref_title_forcerefresh">Force refresh</string>
    <string name="pref_description_forcerefresh">Refresh always on app shows (more data usage)</string>

    <string name="pref_cat_bug">Bug report</string>
    <string name="pref_title_acra">ACRA bug report</string>
    <string name="pref_description_acra">Send crash reports to author (including model of your device)</string>

    <string name="pref_title_parse">Web parse bug report</string>
    <string name="pref_description_parse">Send list of your books to author when you have display errors</string>

    <string name="pref_cat_debug">Debug</string>

    <string name="pref_title_debug">Debug mode</string>
    <string name="pref_description_debug">Enable following debug options</string>

    <string name="pref_title_mock">Read only</string>
    <string name="pref_description_mock">No send to server prolong or reservation cancellation
        requests
    </string>

    <string name="pref_title_usetoday">Use today date</string>
    <string name="pref_description_usetoday">Switch on/off custom today date</string>

    <string name="pref_title_today">Today date</string>
    <string name="pref_description_today">Use this date instead current date (yyyy-MM-dd format)
    </string>

</resources>
